# sdl3-learning

./: CMakeLists.txt  cube.h  input-state.h  main.cpp  mat4.cpp  mat4.h  position-color-vertex.h  position-texture-vertex.h  renderer.cpp  renderer.h  scene-01-clear.cpp  scene-01-clear.h  scene-02-triangle.cpp  scene-02-triangle.h  scene-03-triangle-vertex-buffer.cpp  scene-03-triangle-vertex-buffer.h  scene-04-triangle-cull-modes.cpp  scene-04-triangle-cull-modes.h  scene-06-triangle-indexed.cpp  scene-06-triangle-indexed.h  scene-07-texture-quad.cpp  scene-07-texture-quad.h  scene-08-texture-quad-moving.cpp  scene-08-texture-quad-moving.h  scene.h  time.cpp  time.h  window.cpp  window.h
